--- a/examples/terminal.html
+++ b/examples/terminal.html
@@ -47,5 +47,7 @@
     .put('<br/>')
     .wait(500)
     .put('logout<br/><br/>')
-    .put('[Process completed]<br/>');
+    .put('[Process completed]<br/>')
+    .waitRange(1000, 1500)
+    .deleteAll();
 </script>
