Revert "Add deleteAll method"
I had to revert this commit as the added deleteAll method is not
chainable.
This reverts commit 6a7a61dc92563e4d9c8ad18f72f3cf5d24997b66.

--- a/examples/terminal.html
+++ b/examples/terminal.html
@@ -47,7 +47,5 @@
     .put('<br/>')
     .wait(500)
     .put('logout<br/><br/>')
-    .put('[Process completed]<br/>')
-    .waitRange(1000, 1500)
-    .deleteAll();
+    .put('[Process completed]<br/>');
 </script>
